project(conan_using_silicium)
cmake_minimum_required(VERSION 2.8)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/conanbuildinfo.cmake)
	include(conanbuildinfo.cmake)
	conan_basic_setup()
	set(LIBS ${CONAN_LIBS})
else()
	find_package(Boost REQUIRED thread system)
	set(LIBS ${Boost_LIBRARIES})
endif()
add_executable(main main.cpp)
target_link_libraries(main ${LIBS})
